@@ -40,6 +40,7 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- ------  --------------
+2008-03-04 DP  1.8.3  Remove long-dead Explain Text option from the Query Tool.
 2008-03-03 DP  1.8.3E Add the ability to register external applications on
                       a plugins menu. Menu options can be activated based on
                       the current object selection, and a variety of variables
